# ScanStrat

./: .gitignore  app.py  app_cache.py  investigate_stock_data.py  main.py  pyproject.toml
backtest/: commission.py  engine.py  metrics.py  regime.py  result_cache.py
config/: config.yaml  settings.py
data/: data_service.py
data/cache/: bad_ticker_cache.py  bad_tickers.json  cache_manager.py
data/loaders/: base.py  yfinance_loader.py
data/models/: price_data.py
data/universes/: eu_smallcap.py  eurostoxx50.py  nasdaq100.py  screener.py  smallcap.py  sp500.py
engine/: __init__.py  backtest.py  config.py  data.py  features.py  ranking.py
features/: base.py  feature_engine.py  momentum.py  oscillators.py  reversal.py  trend.py  volatility.py
live/: com.scanstrat.dashboard.plist  com.scanstrat.ensemble.plist  com.scanstrat.scorer.plist  ensemble_scorer.py  macro_indicators.py  pead_scorer.py  scorer.py
pages/: 1_Screening.py  2_Aktiedetalje.py  3_Daily_Breakout.py  4_Portfolio.py  5_ML_Live.py  6_PEAD_Live.py  7_Ensemble_Live.py
portfolio/: __init__.py  charts.py  holdings.py  signals.py
ranking/: normalizer.py  ranker.py  reversal_strategy.py  scorer.py
research/: README.md  analyse_2026.py  compare_universes.py  parameter_search.py  run.py  run_daily.py  run_pead_backtest.py  run_portfolio.py  runner.py
research/strategies/: daily_breakout.py  ensemble_ranker.py  golden_cross.py  high52w.py  low_volatility.py  ml_ranker.py  momentum.py  pead.py  reversal.py  weekly_momentum.py
tests/: conftest.py
tests/backtest/: conftest.py  test_commission.py  test_engine.py  test_metrics.py
tests/data/: test_cache_manager.py  (+3 more)
(+12 files in other folders)
