[[tool.uv.index]]
url = "https://gitlab.com/api/v4/groups/10081543/-/packages/pypi/simple"
name = "netra-gitlab"
[project]
name = "ScanStrat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "streamlit>=1.58.0",
    "yfinance>=1.4.1",
    "pyarrow>=19.0.0",
    "lxml>=6.1.1",
    "xgboost>=3.2.0",
    "scikit-learn>=1.7.2",
]

[tool.uv.sources]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]
